[gd_scene load_steps=17 format=2]

[ext_resource path="res://game.gd" type="Script" id=1]
[ext_resource path="res://external/bg.png" type="Texture" id=2]
[ext_resource path="res://external/screen_glow_light.png" type="Texture" id=3]
[ext_resource path="res://styleboxtexture_button_highlighted.tres" type="StyleBox" id=4]
[ext_resource path="res://styleboxtexture_button_pressed.tres" type="StyleBox" id=5]
[ext_resource path="res://styleboxtexture_button_empty.tres" type="StyleBox" id=6]
[ext_resource path="res://styleboxtexture_button_default.tres" type="StyleBox" id=7]
[ext_resource path="res://external/aseprite/cursor.png" type="Texture" id=8]
[ext_resource path="res://cursor.gd" type="Script" id=9]
[ext_resource path="res://external/bg_01.png" type="Texture" id=10]
[ext_resource path="res://music_manager.tscn" type="PackedScene" id=11]
[ext_resource path="res://logo_intro.tscn" type="PackedScene" id=12]

[sub_resource type="Animation" id=1]
length = 8.0
tracks/0/type = "value"
tracks/0/path = NodePath("v_box_container/label_1:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("v_box_container/label_2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.7, 2.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("v_box_container/label_3:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 4.1, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("v_box_container/sense_of_self_acknowledged_button:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 5.1, 5.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=3]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("eyelid:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 100 ), Vector2( 0, 876 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "fade_in"
length = 20.0
tracks/0/type = "value"
tracks/0/path = NodePath("adventure/label_1:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 3.2, 4.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("adventure/label_2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 5.4, 6.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="game" type="Node"]
script = ExtResource( 1 )

[node name="bg" type="CanvasLayer" parent="."]
editor/display_folded = true
layer = -10

[node name="bg_sprite" type="Sprite" parent="bg"]
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )
centered = false

[node name="bg_light" type="Light2D" parent="bg"]
position = Vector2( 4, 0 )
scale = Vector2( 4, 4 )
texture = ExtResource( 3 )
offset = Vector2( 128, 72 )
energy = 0.3
range_layer_min = -20
range_layer_max = -10

[node name="sense_self" type="CanvasLayer" parent="."]
editor/display_folded = true

[node name="control" type="Control" parent="sense_self"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="bg_sprite_2" type="Sprite" parent="sense_self/control"]
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )
centered = false

[node name="bg_light_2" type="Light2D" parent="sense_self/control"]
scale = Vector2( 4, 4 )
texture = ExtResource( 3 )
offset = Vector2( 128, 72 )
energy = 0.3
range_layer_min = -20
range_layer_max = -10

[node name="v_box_container" type="VBoxContainer" parent="sense_self/control"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 20
alignment = 1

[node name="label_1" type="Label" parent="sense_self/control/v_box_container"]
margin_top = 209.0
margin_right = 1024.0
margin_bottom = 223.0
text = "Congratulations!"
align = 1

[node name="label_2" type="Label" parent="sense_self/control/v_box_container"]
margin_top = 243.0
margin_right = 1024.0
margin_bottom = 257.0
text = "You have acquired a sense of self."
align = 1

[node name="label_3" type="Label" parent="sense_self/control/v_box_container"]
margin_top = 277.0
margin_right = 1024.0
margin_bottom = 291.0
text = "Well Done."
align = 1

[node name="sense_of_self_acknowledged_button" type="Button" parent="sense_self/control/v_box_container"]
margin_left = 449.0
margin_top = 311.0
margin_right = 573.125
margin_bottom = 367.0
rect_min_size = Vector2( 120, 56 )
size_flags_horizontal = 4
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 6 )
custom_styles/normal = ExtResource( 7 )
text = "Acknowledge"

[node name="sense_of_self_animation" type="AnimationPlayer" parent="sense_self/control"]
anims/fade_in = SubResource( 1 )

[node name="cursor" type="CanvasLayer" parent="."]
editor/display_folded = true
layer = 21

[node name="cursor" type="AnimatedSprite" parent="cursor"]
scale = Vector2( 4, 4 )
frames = SubResource( 2 )
script = ExtResource( 9 )

[node name="game_eyelid" type="CanvasLayer" parent="."]
editor/display_folded = true
layer = 20

[node name="eyelid" type="Node2D" parent="game_eyelid"]
position = Vector2( 0, 876 )

[node name="bg_sprite" type="Sprite" parent="game_eyelid/eyelid"]
position = Vector2( 0, -288 )
scale = Vector2( 4, 4 )
texture = ExtResource( 10 )
centered = false

[node name="bg_sprite_2" type="Sprite" parent="game_eyelid/eyelid"]
position = Vector2( 0, 288 )
scale = Vector2( 4, 4 )
texture = ExtResource( 2 )
centered = false

[node name="eyelid_animation" type="AnimationPlayer" parent="game_eyelid"]
anims/open_eyes = SubResource( 3 )

[node name="music_manager" parent="." instance=ExtResource( 11 )]

[node name="sense_adventure" type="CanvasLayer" parent="."]
editor/display_folded = true
layer = 2

[node name="hud_animation" type="AnimationPlayer" parent="sense_adventure"]
anims/fade_in = SubResource( 4 )

[node name="adventure" type="VBoxContainer" parent="sense_adventure"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -50.0

[node name="label_1" type="Label" parent="sense_adventure/adventure"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 1024.0
margin_bottom = 14.0
text = "Currently calibrating your sense of adventure."
align = 1

[node name="label_2" type="Label" parent="sense_adventure/adventure"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 18.0
margin_right = 1024.0
margin_bottom = 32.0
text = "Please look at the most imminent threat."
align = 1

[node name="label_3" type="Label" parent="sense_adventure/adventure"]
visible = false
margin_top = 36.0
margin_right = 1024.0
margin_bottom = 50.0
text = "Currently calibrating your sense of adventure."
align = 1

[node name="canvas_layer" type="CanvasLayer" parent="."]
layer = 20

[node name="logo_intro" parent="canvas_layer" instance=ExtResource( 12 )]

[connection signal="pressed" from="sense_self/control/v_box_container/sense_of_self_acknowledged_button" to="." method="_on_sense_of_self_acknowledged_button_pressed"]
